# trainee_tietoevry

./: main.cpp  meson.build
Header/: Command.hpp  MobileService.hpp  View.hpp
NetConfAgent/: meson.build
NetConfAgent/API/: INetConfAgent.hpp
NetConfAgent/hpp/: MobileClient.hpp  MobileState.hpp  NetConfAgent.hpp  PathGenerator.hpp
NetConfAgent/source/: MobileClient.cpp  NetConfAgent.cpp  PathGenerator.cpp
Source/: Command.cpp  MobileService.cpp  View.cpp  meson.build
Test/: meson.build
Test/Mock/: NetConfAgentMock.hpp
Test/Source/: MobileClientTest.cpp
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  trainee_task
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt  testlog.json  testlog.txt
builddir/meson-private/: coredata.dat.prev
builddir/meson-private/cmake_doctest/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_trace.txt
builddir/meson-private/cmake_trompeloeil/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_trace.txt
